--- a/event-bus/package.json
+++ b/event-bus/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-bus",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple homemade event bus service.",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
